boltffi_backend/tests/jni/snapshots/jni__callback__jni_bridge_keeps_callback_status_param_separate_from_generated_status.snap
---
source: boltffi_backend/tests/jni/callback.rs
expression: "rendered_fixture(\"callback/callback_status_result\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    FfiBuf_u8 (*map_status)(uint64_t, int32_t *, int32_t);
} ___StatusMapperVTable;
void boltffi_register_callback_demo_status_mapper(const ___StatusMapperVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_status_mapper(uint64_t handle);

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
<jni byte-array helpers>
static jclass g____StatusMapperVTable_class = NULL;
static jmethodID g____StatusMapperVTable_free_method = NULL;
static jmethodID g____StatusMapperVTable_clone_method = NULL;
static jmethodID g____StatusMapperVTable_map_status_method = NULL;

static void ___StatusMapperVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____StatusMapperVTable_class, g____StatusMapperVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___StatusMapperVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____StatusMapperVTable_class, g____StatusMapperVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static FfiBuf_u8 ___StatusMapperVTable_map_status(uint64_t handle, int32_t *return_out, int32_t status) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        return (FfiBuf_u8){0};
    }

    jbyteArray __boltffi_return_array = (jbyteArray)(*env)->CallStaticObjectMethod(env, g____StatusMapperVTable_class, g____StatusMapperVTable_map_status_method, (jlong)handle, (jlong)return_out, (jint)status);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    FfiBuf_u8 result = boltffi_jni_byte_array_to_buffer(env, __boltffi_return_array);
    (*env)->DeleteLocalRef(env, __boltffi_return_array);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return result;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    return (FfiBuf_u8){0};
}

static ___StatusMapperVTable g____StatusMapperVTable_vtable = {
    .free = ___StatusMapperVTable_free,
    .clone = ___StatusMapperVTable_clone,
    .map_status = ___StatusMapperVTable_map_status,
};

static bool boltffi_jni_load____StatusMapperVTable_callbacks(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class(env, "com/boltffi/demo/StatusMapperCallbacks", &g____StatusMapperVTable_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method(env, g____StatusMapperVTable_class, "com/boltffi/demo/StatusMapperCallbacks", "free", "(J)V", &g____StatusMapperVTable_free_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method(env, g____StatusMapperVTable_class, "com/boltffi/demo/StatusMapperCallbacks", "clone", "(J)J", &g____StatusMapperVTable_clone_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method(env, g____StatusMapperVTable_class, "com/boltffi/demo/StatusMapperCallbacks", "map_status", "(JJI)[B", &g____StatusMapperVTable_map_status_method)) {
        goto fail;
    }
    boltffi_register_callback_demo_status_mapper(&g____StatusMapperVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____StatusMapperVTable_class);
    g____StatusMapperVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____StatusMapperVTable_callbacks(JNIEnv *env) {
    if (g____StatusMapperVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____StatusMapperVTable_class);
    }
    g____StatusMapperVTable_class = NULL;
    g____StatusMapperVTable_free_method = NULL;
    g____StatusMapperVTable_clone_method = NULL;
    g____StatusMapperVTable_map_status_method = NULL;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1success_1i32(JNIEnv *env, jclass cls, jlong return_out, jint value) {
    (void)cls;
    if (return_out == 0) {
        boltffi_jni_throw_runtime(env, "BoltFFI success out pointer was null");
        return;
    }
    *((int32_t *)(uintptr_t)return_out) = (int32_t)value;
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class(env, "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____StatusMapperVTable_callbacks(env)) {
        boltffi_jni_unload____StatusMapperVTable_callbacks(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____StatusMapperVTable_callbacks(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}
