boltffi_backend/tests/jni/snapshots/jni__callback__jni_bridge_renders_async_callback_completion_shapes.snap
---
source: boltffi_backend/tests/jni/callback.rs
expression: "rendered_fixture(\"callback/async_callback_return_shapes\")"
---
===== jni/demo.h =====
<c abi support declarations>
typedef struct {
    int32_t x;
    int32_t y;
} ___Point;
typedef int32_t ___LoadError;
#define LOAD_ERROR_BAD ((___LoadError)1)
typedef struct {
    void (*free)(uint64_t);
    uint64_t (*clone)(uint64_t);
    void (*value)(uint64_t, uint32_t, void (*)(void *, FfiStatus, uint32_t), void *);
    void (*point)(uint64_t, ___Point, void (*)(void *, FfiStatus, ___Point), void *);
    void (*values)(uint64_t, uint32_t, void (*)(void *, FfiStatus, FfiBuf_u8), void *);
    void (*try_load)(uint64_t, uint32_t, void (*)(void *, FfiStatus, FfiBuf_u8), void *);
    void (*check_enabled)(uint64_t, uint32_t, void (*)(void *, FfiStatus, FfiBuf_u8), void *);
} ___ListenerVTable;
void boltffi_register_callback_demo_listener(const ___ListenerVTable *vtable);
BoltFFICallbackHandle boltffi_create_callback_demo_listener(uint64_t handle);

===== jni/jni_glue.c =====
<jni source includes>
<jni thread runtime>
<jni exception helpers>
<jni byte-array helpers>
<jni record helpers>
typedef struct {
    void (*free)(uint64_t handle);
    uint64_t (*clone)(uint64_t handle);
} BoltFFICallbackVTablePrefix;

static const BoltFFICallbackVTablePrefix *boltffi_jni_callback_vtable_prefix(const BoltFFICallbackHandle *callback) {
    return callback == NULL ? NULL : (const BoltFFICallbackVTablePrefix *)callback->vtable;
}

static void boltffi_jni_release_callback_value(BoltFFICallbackHandle callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(&callback);
    if (callback.handle != 0 && vtable != NULL && vtable->free != NULL) {
        vtable->free(callback.handle);
    }
}

static jlong boltffi_jni_callback_handle_new_owned(JNIEnv *env, BoltFFICallbackHandle callback) {
    if (callback.handle == 0 || callback.vtable == NULL) {
        return 0;
    }
    BoltFFICallbackHandle *stored_callback = (BoltFFICallbackHandle *)malloc(sizeof(BoltFFICallbackHandle));
    if (stored_callback == NULL) {
        boltffi_jni_release_callback_value(callback);
        boltffi_jni_throw_runtime(env, "failed to allocate BoltFFI callback handle");
        return 0;
    }
    *stored_callback = callback;
    return (jlong)(uintptr_t)stored_callback;
}

static BoltFFICallbackHandle *boltffi_jni_callback_handle_ref(jlong handle) {
    return handle == 0 ? NULL : (BoltFFICallbackHandle *)(uintptr_t)handle;
}

typedef BoltFFICallbackHandle (*BoltFFICallbackCreate)(uint64_t handle);

static BoltFFICallbackHandle boltffi_jni_callback_parameter(uint64_t handle, BoltFFICallbackCreate create) {
    if ((handle & 1u) != 0u) {
        return create(handle);
    }
    const BoltFFICallbackHandle *stored_callback = boltffi_jni_callback_handle_ref((jlong)handle);
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(stored_callback);
    if (stored_callback == NULL || stored_callback->handle == 0 || vtable == NULL || vtable->clone == NULL) {
        return (BoltFFICallbackHandle){0};
    }
    return (BoltFFICallbackHandle){
        .handle = vtable->clone(stored_callback->handle),
        .vtable = stored_callback->vtable,
    };
}

static void boltffi_jni_callback_handle_release(BoltFFICallbackHandle *callback) {
    if (callback == NULL) {
        return;
    }
    boltffi_jni_release_callback_value(*callback);
    free(callback);
}

static jlong boltffi_jni_callback_handle_clone(JNIEnv *env, const BoltFFICallbackHandle *callback) {
    const BoltFFICallbackVTablePrefix *vtable = boltffi_jni_callback_vtable_prefix(callback);
    if (callback == NULL || callback->handle == 0 || vtable == NULL || vtable->clone == NULL) {
        return 0;
    }
    BoltFFICallbackHandle cloned_callback = {
        .handle = vtable->clone(callback->handle),
        .vtable = callback->vtable,
    };
    if (cloned_callback.handle == 0) {
        return 0;
    }
    return boltffi_jni_callback_handle_new_owned(env, cloned_callback);
}

JNIEXPORT jlong JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1clone(JNIEnv *env, jclass cls, jlong handle) {
    (void)cls;
    return boltffi_jni_callback_handle_clone(env, boltffi_jni_callback_handle_ref(handle));
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1callback_1handle_1release(JNIEnv *env, jclass cls, jlong handle) {
    (void)env;
    (void)cls;
    boltffi_jni_callback_handle_release(boltffi_jni_callback_handle_ref(handle));
}

static jclass g____ListenerVTable_class = NULL;
static jmethodID g____ListenerVTable_free_method = NULL;
static jmethodID g____ListenerVTable_clone_method = NULL;
static jmethodID g____ListenerVTable_value_method = NULL;
static jmethodID g____ListenerVTable_point_method = NULL;
static jmethodID g____ListenerVTable_values_method = NULL;
static jmethodID g____ListenerVTable_try_load_method = NULL;
static jmethodID g____ListenerVTable_check_enabled_method = NULL;

static void ___ListenerVTable_free(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return;
    }
    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_free_method, (jlong)handle);
    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);
}

static uint64_t ___ListenerVTable_clone(uint64_t handle) {
    JNIEnv *env = NULL;
    int attached = 0;
    if (!boltffi_jni_enter(&env, &attached)) {
        return 0;
    }
    jlong result = (*env)->CallStaticLongMethod(env, g____ListenerVTable_class, g____ListenerVTable_clone_method, (jlong)handle);
    if (boltffi_jni_clear_exception(env)) {
        boltffi_jni_exit(env, attached);
        return 0;
    }
    boltffi_jni_exit(env, attached);
    return (uint64_t)result;
}

static void ___ListenerVTable_value(uint64_t handle, uint32_t key, void (*complete)(void *, FfiStatus, uint32_t), void *complete_context) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        complete(complete_context, (FfiStatus){.code = 1}, (uint32_t){0});
        return;
    }

    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_value_method, (jlong)handle, (jint)key, (jlong)complete, (jlong)complete_context);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    complete(complete_context, (FfiStatus){.code = 1}, (uint32_t){0});

    return;
}

static void ___ListenerVTable_point(uint64_t handle, ___Point point, void (*complete)(void *, FfiStatus, ___Point), void *complete_context) {
    JNIEnv *env = NULL;
    int attached = 0;

    jbyteArray __boltffi_point_array = NULL;
    if (!boltffi_jni_enter(&env, &attached)) {
        complete(complete_context, (FfiStatus){.code = 1}, (___Point){0});
        return;
    }

    __boltffi_point_array = boltffi_jni_record_to_byte_array(env, &point, (uintptr_t)sizeof(point));
    if (__boltffi_point_array == NULL) {
        goto __boltffi_fail;
    }

    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_point_method, (jlong)handle, __boltffi_point_array, (jlong)complete, (jlong)complete_context);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    if (__boltffi_point_array != NULL) {
        (*env)->DeleteLocalRef(env, __boltffi_point_array);
        __boltffi_point_array = NULL;
    }

    boltffi_jni_exit(env, attached);
    return;
__boltffi_fail:

    if (__boltffi_point_array != NULL) {
        (*env)->DeleteLocalRef(env, __boltffi_point_array);
        __boltffi_point_array = NULL;
    }

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    complete(complete_context, (FfiStatus){.code = 1}, (___Point){0});

    return;
}

static void ___ListenerVTable_values(uint64_t handle, uint32_t count, void (*complete)(void *, FfiStatus, FfiBuf_u8), void *complete_context) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        complete(complete_context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});
        return;
    }

    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_values_method, (jlong)handle, (jint)count, (jlong)complete, (jlong)complete_context);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    complete(complete_context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});

    return;
}

static void ___ListenerVTable_try_load(uint64_t handle, uint32_t key, void (*complete)(void *, FfiStatus, FfiBuf_u8), void *complete_context) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        complete(complete_context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});
        return;
    }

    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_try_load_method, (jlong)handle, (jint)key, (jlong)complete, (jlong)complete_context);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    complete(complete_context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});

    return;
}

static void ___ListenerVTable_check_enabled(uint64_t handle, uint32_t key, void (*complete)(void *, FfiStatus, FfiBuf_u8), void *complete_context) {
    JNIEnv *env = NULL;
    int attached = 0;

    if (!boltffi_jni_enter(&env, &attached)) {
        complete(complete_context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});
        return;
    }

    (*env)->CallStaticVoidMethod(env, g____ListenerVTable_class, g____ListenerVTable_check_enabled_method, (jlong)handle, (jint)key, (jlong)complete, (jlong)complete_context);
    if (boltffi_jni_clear_exception(env)) {
        goto __boltffi_fail;
    }

    boltffi_jni_exit(env, attached);
    return;
__boltffi_fail:

    boltffi_jni_clear_exception(env);
    boltffi_jni_exit(env, attached);

    complete(complete_context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});

    return;
}

static ___ListenerVTable g____ListenerVTable_vtable = {
    .free = ___ListenerVTable_free,
    .clone = ___ListenerVTable_clone,
    .value = ___ListenerVTable_value,
    .point = ___ListenerVTable_point,
    .values = ___ListenerVTable_values,
    .try_load = ___ListenerVTable_try_load,
    .check_enabled = ___ListenerVTable_check_enabled,
};

static bool boltffi_jni_load____ListenerVTable_callbacks(JNIEnv *env) {
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/ListenerCallbacks", "com/boltffi/demo/ListenerCallbacks", &g____ListenerVTable_class)) {
        return false;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "free", "free", "(J)V", "(J)V", &g____ListenerVTable_free_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "clone", "clone", "(J)J", "(J)J", &g____ListenerVTable_clone_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "value", "value", "(JIJJ)V", "(JIJJ)V", &g____ListenerVTable_value_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "point", "point", "(J[BJJ)V", "(J[BJJ)V", &g____ListenerVTable_point_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "values", "values", "(JIJJ)V", "(JIJJ)V", &g____ListenerVTable_values_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "try_load", "try_load", "(JIJJ)V", "(JIJJ)V", &g____ListenerVTable_try_load_method)) {
        goto fail;
    }
    if (!boltffi_jni_lookup_static_method_with_diagnostic(env, g____ListenerVTable_class, "com/boltffi/demo/ListenerCallbacks", "check_enabled", "check_enabled", "(JIJJ)V", "(JIJJ)V", &g____ListenerVTable_check_enabled_method)) {
        goto fail;
    }
    boltffi_register_callback_demo_listener(&g____ListenerVTable_vtable);
    return true;
fail:
    (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    g____ListenerVTable_class = NULL;
    return false;
}

static void boltffi_jni_unload____ListenerVTable_callbacks(JNIEnv *env) {
    if (g____ListenerVTable_class != NULL) {
        (*env)->DeleteGlobalRef(env, g____ListenerVTable_class);
    }
    g____ListenerVTable_class = NULL;
    g____ListenerVTable_free_method = NULL;
    g____ListenerVTable_clone_method = NULL;
    g____ListenerVTable_value_method = NULL;
    g____ListenerVTable_point_method = NULL;
    g____ListenerVTable_values_method = NULL;
    g____ListenerVTable_try_load_method = NULL;
    g____ListenerVTable_check_enabled_method = NULL;
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1Bytes(JNIEnv *env, jclass cls, jlong callback, jlong context, jbyteArray result) {
    (void)cls;
    void (*complete)(void *, FfiStatus, FfiBuf_u8) = (void (*)(void *, FfiStatus, FfiBuf_u8))callback;
    FfiBuf_u8 payload = boltffi_jni_byte_array_to_buffer(env, result);
    if ((*env)->ExceptionCheck(env)) {
        (*env)->ExceptionClear(env);
        complete((void *)context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});
        return;
    }
    complete((void *)context, (FfiStatus){.code = 0}, payload);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1Bytes_1failure(JNIEnv *env, jclass cls, jlong callback, jlong context) {
    (void)env;
    (void)cls;
    void (*complete)(void *, FfiStatus, FfiBuf_u8) = (void (*)(void *, FfiStatus, FfiBuf_u8))callback;
    complete((void *)context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1Bytes_1error(JNIEnv *env, jclass cls, jlong callback, jlong context, jbyteArray result) {
    (void)cls;
    void (*complete)(void *, FfiStatus, FfiBuf_u8) = (void (*)(void *, FfiStatus, FfiBuf_u8))callback;
    FfiBuf_u8 payload = boltffi_jni_byte_array_to_buffer(env, result);
    if ((*env)->ExceptionCheck(env)) {
        (*env)->ExceptionClear(env);
        complete((void *)context, (FfiStatus){.code = 1}, (FfiBuf_u8){0});
        return;
    }
    complete((void *)context, (FfiStatus){.code = 1}, payload);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1Record_1_1_1_1Point(JNIEnv *env, jclass cls, jlong callback, jlong context, jbyteArray result) {
    (void)cls;
    void (*complete)(void *, FfiStatus, ___Point) = (void (*)(void *, FfiStatus, ___Point))callback;
    ___Point payload = {0};
    if (!boltffi_jni_read_record(env, result, (uintptr_t)sizeof(payload), &payload)) {
        boltffi_jni_clear_exception(env);
        complete((void *)context, (FfiStatus){.code = 1}, (___Point){0});
        return;
    }
    complete((void *)context, (FfiStatus){.code = 0}, payload);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1Record_1_1_1_1Point_1failure(JNIEnv *env, jclass cls, jlong callback, jlong context) {
    (void)env;
    (void)cls;
    void (*complete)(void *, FfiStatus, ___Point) = (void (*)(void *, FfiStatus, ___Point))callback;
    complete((void *)context, (FfiStatus){.code = 1}, (___Point){0});
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1Record_1_1_1_1Point_1error(JNIEnv *env, jclass cls, jlong callback, jlong context, jbyteArray result) {
    (void)cls;
    void (*complete)(void *, FfiStatus, ___Point) = (void (*)(void *, FfiStatus, ___Point))callback;
    ___Point payload = {0};
    if (!boltffi_jni_read_record(env, result, (uintptr_t)sizeof(payload), &payload)) {
        boltffi_jni_clear_exception(env);
        complete((void *)context, (FfiStatus){.code = 1}, (___Point){0});
        return;
    }
    complete((void *)context, (FfiStatus){.code = 1}, payload);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1U32(JNIEnv *env, jclass cls, jlong callback, jlong context, jint result) {
    (void)cls;
    void (*complete)(void *, FfiStatus, uint32_t) = (void (*)(void *, FfiStatus, uint32_t))callback;
    (void)env;
    complete((void *)context, (FfiStatus){.code = 0}, (uint32_t)result);
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1U32_1failure(JNIEnv *env, jclass cls, jlong callback, jlong context) {
    (void)env;
    (void)cls;
    void (*complete)(void *, FfiStatus, uint32_t) = (void (*)(void *, FfiStatus, uint32_t))callback;
    complete((void *)context, (FfiStatus){.code = 1}, (uint32_t){0});
}

JNIEXPORT void JNICALL Java_com_boltffi_demo_Native_boltffi_1async_1callback_1complete_1U32_1error(JNIEnv *env, jclass cls, jlong callback, jlong context, jint result) {
    (void)cls;
    void (*complete)(void *, FfiStatus, uint32_t) = (void (*)(void *, FfiStatus, uint32_t))callback;
    (void)env;
    complete((void *)context, (FfiStatus){.code = 1}, (uint32_t)result);
}

JNIEXPORT jint JNICALL JNI_OnLoad(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    jint env_result = (*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6);
    if (env_result != JNI_OK) {
        fprintf(stderr, "BoltFFI JNI_OnLoad failed: GetEnv(JNI_VERSION_1_6) returned %d\n", (int)env_result);
        return JNI_ERR;
    }
    if (!boltffi_jni_lookup_global_class_with_diagnostic(env, "com/boltffi/demo/Native", "com/boltffi/demo/Native", &boltffi_jni_native_class)) {
        return JNI_ERR;
    }
    if (!boltffi_jni_load____ListenerVTable_callbacks(env)) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        boltffi_jni_native_class = NULL;
        return JNI_ERR;
    }
    boltffi_jni_vm = vm;
    return JNI_VERSION_1_6;
}

JNIEXPORT void JNICALL JNI_OnUnload(JavaVM *vm, void *reserved) {
    (void)reserved;
    JNIEnv *env = NULL;
    if ((*vm)->GetEnv(vm, (void **)&env, JNI_VERSION_1_6) == JNI_OK) {
        boltffi_jni_unload____ListenerVTable_callbacks(env);
        if (boltffi_jni_native_class != NULL) {
            (*env)->DeleteGlobalRef(env, boltffi_jni_native_class);
        }
    }
    boltffi_jni_vm = NULL;
    boltffi_jni_native_class = NULL;
}
